libstream-more-perl (0.7.7) unstable; urgency=low

  * Stream::In::DiskBuffer: fix adaptive chunk size calculation
  * Stream::Out::Any: targets() method

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 13 Feb 2012 22:41:07 +0400

libstream-more-perl (0.7.6) unstable; urgency=low

  * use and implement DOES() instead of does() when checking for capabilities

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 12 Jan 2012 22:24:57 +0400

libstream-more-perl (0.7.5) unstable; urgency=low

  * don't use Yandex::Version - dzil-generated $VERSION is enough

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Thu, 24 Nov 2011 17:01:08 +0400

libstream-more-perl (0.7.4) unstable; urgency=low

  * rollback removing 'data2' key in json formatter, add assert instead, so
    that we can upgrade smoothly in the next release

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Wed, 16 Nov 2011 18:25:05 +0400

libstream-more-perl (0.7.3) unstable; urgency=low

  * DiskBuffer: support lag role when moose-based input stream supports it
  * get rid of 'data2' in json formatter
  * RoundRobin:
   - load Format::Human::Bytes - fix 'info' method
   - don't keep input stream locked if we read nothing

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 14 Nov 2011 18:32:11 +0400

libstream-more-perl (0.7.2) unstable; urgency=low

  * Stream::RoundRobin:
   - description role
   - fill with \n instead of \0 initially
  * Stream::Queue:
   - description role
   - order big chunks when reading
   - Stream::Queue::In moosified
  * rewrite Stream::Concat and Stream::Concat::In with Moose
  * Stream::Concat::In propagates lag method
  * more pod everywhere, test pod for moose-based classes

 -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Mon, 10 Oct 2011 18:29:54 +0400

libstream-more-perl (0.7.1) unstable; urgency=low

  * Stream::Moose::Role::Description
